tests/ui/plain_join_future.stderr
error[E0277]: the trait bound `std::future::Ready<Result<(), durust::Error>>: DurableJoinBranch` is not satisfied
 --> tests/ui/plain_join_future.rs:6:13
  |
6 |       let _ = durust::join!(
  |  _____________^
7 | |         std::future::ready(Ok::<(), durust::Error>(())),
8 | |         durust::sleep(std::time::Duration::from_millis(1)),
9 | |     )
  | |_____^ the trait `DurableJoinBranch` is not implemented for `std::future::Ready<Result<(), durust::Error>>`
  |
  = help: the following other types implement trait `DurableJoinBranch`:
            ActivityFuture<A>
            ActivityMapResultFuture
            ActivityMapSpawnFuture<A>
            ActivityResultFuture<A>
            ActivitySpawnFuture<A>
            BoxSelectBranch<T>
            ChildWorkflowMapResultFuture
            ChildWorkflowMapSpawnFuture<W>
          and $N others
note: required by a bound in `durust::__durust_join_assert_branch`
 --> src/runtime.rs
  |
  | pub fn __durust_join_assert_branch<F>(_: &F)
  |        --------------------------- required by a bound in this function
  | where
  |     F: DurableJoinBranch,
  |        ^^^^^^^^^^^^^^^^^ required by this bound in `__durust_join_assert_branch`
  = note: this error originates in the macro `durust::join` (in Nightly builds, run with -Z macro-backtrace for more info)
